--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Serif:ital,opsz,wght@0,8..144,100..900;1,8..144,100..900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
+
+
 *{
     margin: 0;
     padding: 0;
@@ -23,4 +26,53 @@ img{
 h1,h2,h3,h4,h5,h6,p{
     margin: 0;
     padding: 0;
+}
+
+body{
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background: #FDFAF6;
+}
+
+#game .game-box{
+    padding: 10px 20px;
+    border: 2px solid #99BC85;
+    border-radius: 5px;
+}
+
+input{
+    width: 400px;
+    height: 40px;
+    border: none;
+    outline: none;
+    background: #99BC85;
+    border-radius: 5px;
+    font-size: 20px;
+    font-weight: 500;
+    font-family: "Roboto Serif", serif;
+    padding-left: 20px;
+    text-transform: uppercase;
+}
+
+button{
+    width: 80px;
+    height: 40px;
+    border: none;
+    outline: none;
+    border-radius: 5px;
+    font-weight: 600;
+    font-family: "Roboto Serif", serif;
+    text-transform: uppercase;
+}
+
+.player-1 button{
+    background: rgb(35, 76, 189);
+}
+
+.player-2 button{
+    background: rgb(228, 32, 32);
 }
